--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
 
     <h3>HI THERE !</h3>
     <h1>I'M <span>Mrinal Sauraji</span></h1>
-    <p>My name is Mrinal Sawraj, I am a student of National Institute of Technology Agartala.I love doing new things. I have learned many things and am learning every day.Together we can do amazing work.
+    <p>My name is Mrinal Sauraji, I am a student of National Institute of Technology Agartala.I love doing new things. I have learned many things and am learning every day.Together we can do amazing work.
     </p>
     <a href="#about"><button class="btn">about me <i class="fas fa-user"></i></button></a>
 
@@ -70,7 +70,7 @@
         <h3> <span> qualification : </span> MCA </h3>
         <h3> <span> post : </span> front end developer </h3>
         <h3> <span> language : </span> hindi/english </h3>
-        <a href="#"><button class="btn"> download CV <i class="fas fa-download"></i> </button></a>
+        <a href="https://blogger.googleusercontent.com/img/a/AVvXsEh4b9_fL8_MDQk5uvNDsvcri1EQzvQNpiMX3r7yS55TReHIaeBJW8B9S9VVObNKzJ7yZc1NygLylas7sZSdjC9HRbt2S03_-hIUnAwPHAhFKwcIZ1cDRm-ieiA6WDAsMQ6BXJIT3AbBBEGIy-R00Tf8aQR61Rq8vDkuvkaNxugu6D1nZJmuNESh-tmxFA=w633-h807"><button class="btn"> download CV <i class="fas fa-download"></i> </button></a>
     </div>
 
     <div class="counter">
@@ -115,42 +115,44 @@
         <i class="fas fa-graduation-cap"></i>
         <span>2015</span>
         <h3>Intermediate</h3>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Obcaecati quos alias praesentium. Id autem provident laborum quae, distinctio eaque temporibus!</p>
+        <p>I have done from BSEB_patna, secure 66.7%</p>
     </div>
 
     <div class="box">
         <i class="fas fa-graduation-cap"></i>
         <span>2019</span>
         <h3>Complite my graduation</h3>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Obcaecati quos alias praesentium. Id autem provident laborum quae, distinctio eaque temporibus!</p>
+        <p>I have done my BCA from CSIST-Muzaffarpur and secure 75.50% marks </p>
     </div>
 
     <div class="box">
         <i class="fas fa-graduation-cap"></i>
         <span>2019</span>
         <h3>MCA</h3>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Obcaecati quos alias praesentium. Id autem provident laborum quae, distinctio eaque temporibus!</p>
+        <p> Currently i am dong MCA from NIT_Agartala.my current CGPA is 8.10.</p>
     </div>
 
     <div class="box">
         <i class="fas fa-graduation-cap"></i>
         <span>2019</span>
         <h3>Certification </h3>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Obcaecati quos alias praesentium. Id autem provident laborum quae, distinctio eaque temporibus!</p>
+        <p> cisco, Certified Network Professional, intermediate level. <br>
+         Google, Digital Marketing Certification</p>
     </div>
 
     <div class="box">
         <i class="fas fa-graduation-cap"></i>
         <span>2020</span>
         <h3>Internships</h3>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Obcaecati quos alias praesentium. Id autem provident laborum quae, distinctio eaque temporibus!</p>
+        <p>  4 months intern bsed on frontEnd in knovatic.learn HTML,CSS,JS,SQL
+             </p>
     </div>
 
     <div class="box">
         <i class="fas fa-graduation-cap"></i>
         <span>2021</span>
         <h3>Internships</h3>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Obcaecati quos alias praesentium. Id autem provident laborum quae, distinctio eaque temporibus!</p>
+        <p> 6 months internship from WebHub Technology, working area is nodeJs,ReactJs.</p>
     </div>
 
 </div>
